2006-01-11  Julien Puydt  <jpuydt@free.fr>

	* lib/gui/gmtray/gmtray.h, lib/gui/gmtray-internal.h,
	lib/gui/gmtray/gmtray-common.c, lib/gui/gmtray/gmtray-x11.c,
	lib/gui/gmtray/gmtray-win32.c: Added a gpointer data to the callbacks.

2006-01-11 Kilian Krause <kk@verfaction.de>

	* src/clients/avahi.cpp: Update to new naming scheme.

2006-01-10  Damien Sandras  <dsandras@gnome.org>

	* src/gui/druid.cpp: More fixes.

2006-01-10  Damien Sandras  <dsandras@gnome.org>

	* autogen.sh configure.in:
	Applied patch from Fernando Herrera for compilation into jhbuild. Thanks
	a lot!

2006-01-10  Damien Sandras  <dsandras@gnome.org>

	* ekiga.schemas.in.in help/es/es.po help/fr/fr.po help/uk/uk.po 
	po/POTFILES.in src/gui/preferences.cpp 
	More fixes.

2006-01-10 Kilian Krause <kk@verfaction.de>

	* src/clients/zeroconf.cpp: Update to compile with new naming scheme.

2006-01-10  Damien Sandras  <dsandras@gnome.org>

	* pixmaps/ekiga-logo.png:
	Committed update.

2006-01-10  Damien Sandras  <dsandras@gnome.org>

	* ekiga.schemas.in.in src/clients/stun.cpp 
	src/components/bonobo.cpp src/devices/audio.cpp 
	src/devices/videoinput.cpp src/endpoints/ekiga.cpp 
	src/endpoints/manager.cpp src/gui/callbacks.cpp 
	src/gui/config.cpp src/gui/druid.cpp src/gui/main.cpp 
	src/gui/preferences.cpp src/gui/tools.cpp src/gui/tray.cpp:
	More fixes and s/GnomeMeeting/Ekiga.
	
2006-01-10  Damien Sandras  <dsandras@gnome.org>

	* ChangeLog LICENSE Makefile.am autogen.sh configure.in 
	lib/Makefile.am lib/about/Makefile.am lib/druid/Makefile.am 
	lib/gmconf/Makefile.am lib/gmcontacts/Makefile.am 
	lib/gui/Makefile.am lib/gui/gmtray/Makefile.am 
	lib/toolbox/Makefile.am man/Makefile.am pixmaps/Makefile.am 
	sounds/Makefile.am src/Makefile.am src/clients/stun.cpp 
	src/components/bonobo.cpp src/components/dbus.cpp 
	src/devices/audio.cpp src/devices/videoinput.cpp 
	src/devices/videooutput.cpp src/endpoints/accountshandler.cpp 
	src/endpoints/h323.cpp src/endpoints/manager.cpp 