@@ -2,6 +2,12 @@
 
 	* lib/gui/gmtray/gmtray.h, lib/gui/gmtray-internal.h,
 	lib/gui/gmtray/gmtray-common.c, lib/gui/gmtray/gmtray-x11.c,
+        lib/gui/gmtray/gmtray-win32.c: Added the middle click action.
+
+2006-01-11  Julien Puydt  <jpuydt@free.fr>
+
+	* lib/gui/gmtray/gmtray.h, lib/gui/gmtray-internal.h,
+	lib/gui/gmtray/gmtray-common.c, lib/gui/gmtray/gmtray-x11.c,
 	lib/gui/gmtray/gmtray-win32.c: Added a gpointer data to the callbacks.
 
 2006-01-11 Kilian Krause <kk@verfaction.de>
